@@ -41,7 +41,7 @@ use EBox::Sudo;
 use EBox::Types::Boolean;
 use EBox::WebAdmin::UserConfiguration;
 
-use Clone::Fast;
+use Clone;
 use Encode;
 use TryCatch;
 use POSIX qw(ceil INT_MAX);
@@ -3769,7 +3769,7 @@ sub _checkMethodSignature # (action, methodName, paramsRef)
 {
     my ($self, $action, $methodName, $oldParamsRef) = @_;
 
-    my $paramsRef = Clone::Fast::clone($oldParamsRef);
+    my $paramsRef = Clone::clone($oldParamsRef);
 
     # Delete the action from the name
     my $first = ( $methodName =~ s/^$action// );
@@ -4040,7 +4040,7 @@ sub _autoloadActionSubModel # (action, methodName, paramsRef)
 {
     my ($self, $action, $methodName, $origParamsRef) = @_;
 
-    my $paramsRef = Clone::Fast::clone($origParamsRef);
+    my $paramsRef = Clone::clone($origParamsRef);
 
     $methodName =~ s/^$action//;
 
