@@ -31,7 +31,7 @@ use EBox;
 use EBox::Exceptions::Internal;
 
 # Dependencies
-use Clone::Fast;
+use Clone;
 use Perl6::Junction qw(none);
 
 # It's a package global
@@ -79,7 +79,7 @@ sub clone
     my @suspectedAttrs = qw(model row subtypes);
     foreach my $key (keys %{$self}) {
         if ( $key eq none(@suspectedAttrs) ) {
-            $clonedType->{$key} = Clone::Fast::clone($self->{$key});
+            $clonedType->{$key} = Clone::clone($self->{$key});
         }
     }
     # Just copy the reference
