@@ -98,7 +98,7 @@
 	+ Fixed error which broke rules for inverse service
 	  match for any TCP or any UDP for all ports
 2.3.8
-	+ Use Clone::Fast instead of Clone
+	+ Use Clone instead of Clone
 	+ Added load of custom iptables modules
 	+ Added table for SNAT rules
 	+ Added filtering by source MAC
