@@ -1,5 +1,6 @@
 HEAD
 	+ Xenial port
+	+ Use Clone instead of Clone::Fast
 4.2.2
 	+ Allow upgrade of packages that are not present in QA repo
 	+ Avoid crash in manage-logs script with undefined mods
